[package]
name = "fltk-flow"
version = "0.1.3"
edition = "2018"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
description = "A flow widget wrapping Fl_Flow"
repository = "https://github.com/fltk-rs/fltk-flow"
documentation = "https://docs.rs/fltk-flow"
keywords = ["gui", "widgets", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.2.19"
fltk-sys = "1.2.19"
paste = "1"

[build-dependencies]
fltk-sys = "1.2.19"
fltk-build = "0.1"
cc = "1"