[package]
name = "fltk-flow"
version = "0.2.4"
edition = "2021"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
description = "A flow widget wrapping Fl_Flow"
repository = "https://github.com/fltk-rs/fltk-flow"
documentation = "https://docs.rs/fltk-flow"
keywords = ["gui", "widgets", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"


[dependencies]
fltk = "1.4.23"
fltk-sys = "1.4.23"
paste = "1"

[build-dependencies]
fltk-sys = "1.4.23"
fltk-build = "0.1"
cc = "1"
